# kubernetes-metrics

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  LICENSE  README.md  mise.toml  release-please-config.json
.github/workflows/: docker-build-push.yaml  release-please.yaml
kubernetes/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
scripts/: setup_deploy_key.sh  update_kustomize_tag
src/backend/: .coverage  CHANGELOG.md  DockerBackup  Dockerfile  coverage.xml  pyproject.toml
src/backend/src/backend/: config.py  main.py
src/backend/src/backend/test/: main.py
src/backend/src/data/: sessions.csv
src/frontend/: .coverage  CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
src/frontend/src/frontend/old/: main.py
src/frontend/src/frontend/templates/: index.html
