[project]
name = "gin-metrics-backend"
version = "0.2.1"
description = "Backend API for kubernetes metrics."
readme = "README.md"
authors = [
    { name = "crpruett", email = "crpruett@iu.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.4",
    "httpx>=0.28.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
devops-study-api = "backend.main:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scpoe = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"] 
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]
