[project]
name = "gin-metrics-backend"
version = "0.0.0"
description = "Kubernetes Metrcis Board"
readme = "README.md"
authors = [
    { name = "crpruett", email = "crpruett@iu.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
gin-metrics-api = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
